Added prettier and gitignore

--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-   </head>
+  </head>
 
   <body>
     <div id="container">
       <header id="header" class="item">
         <a id="logo" href="#hero">
-          <img id="header-img" 
-               src="images/logo_spam-brand.png"
-               alt="SPAM logo">
+          <img id="header-img" src="images/logo_spam-brand.png" alt="SPAM logo">
           </img>
         </a>
         <nav id="nav-bar">
@@ -36,8 +34,7 @@
         <section id="hero" class="section">
           <figure id="spam-can">
             <div class="glow">
-              <img src="images/spam.png"
-                   alt="A can of SPAM">
+              <img src="images/spam.png" alt="A can of SPAM">
             </div>
           </figure>
           <blockquote>
@@ -45,8 +42,8 @@
                 Subscribe right now and receive free SPAM!
               </h1>
           </blockquote>
-          <form id="form" 
-                action="https://www.freecodecamp.com/email-submit" 
+          <form id="form"
+                action="https://www.freecodecamp.com/email-submit"
                 method="POST">
             <div class="field">
               <input
@@ -68,9 +65,7 @@
         <section id="ingredients" class="section">
           <figure class="card">
             <div class="image red">
-              <img class="icon"
-                   src="images/pork.png"
-                   alt="An icon of a piggy."/>
+              <img class="icon" src="images/pork.png" alt="An icon of a piggy."/>
             </div>
             <figcaption class="caption">
               <h2 class="title">
@@ -83,9 +78,7 @@
           </figure>
           <figure class="card">
             <div class="image orange">
-              <img class="icon"
-                   src="images/sugar.png"
-                   alt="An icon of sugar cubes"/>
+              <img class="icon" src="images/sugar.png" alt="An icon of sugar cubes"/>
             </div>
             <figcaption class="caption">
               <h2 class="title">
@@ -98,9 +91,7 @@
           </figure>
           <figure class="card">
             <div class="image pink">
-              <img class="icon"
-                   src="images/salt.png"
-                   alt="An icon of a salt shaker"/>
+              <img class="icon" src="images/salt.png" alt="An icon of a salt shaker"/>
             </div>
             <figcaption class="caption">
               <h2 class="title">
@@ -113,9 +104,7 @@
           </figure>
           <figure class="card">
             <div class="image turquoise">
-              <img class="icon"
-                   src="images/water.png"
-                   alt="An icon of a bottle of water with a glass."/>
+              <img class="icon" src="images/water.png" alt="An icon of a bottle of water with a glass."/>
             </div>
             <figcaption class="caption">
               <h2 class="title">
@@ -161,9 +150,9 @@
           <div class="video-container">
              <iframe id="video"
                 width="100%"
-                src="https://www.youtube.com/embed/mBcY3W5WgNU" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                src="https://www.youtube.com/embed/mBcY3W5WgNU"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
             </iframe>
           </div>
