--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -165,9 +165,7 @@
           <div class="video-container">
             <iframe
               id="video"
-              width="100%"
               src="https://www.youtube.com/embed/mBcY3W5WgNU"
-              frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             >
@@ -181,7 +179,7 @@
           </blockquote>
         </section>
         <section id="menu" class="section">
-          <ul>
+          <div class="wrapper">
             <figure class="card">
               <div class="image">
                 <img
@@ -192,106 +190,108 @@
               </div>
             </figure>
             <h1>Menu</h1>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Standard</h2>
-                  <h2>£3.00</h2>
-                </dt>
-                <dd class="description">egg and bacon</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Deluxe</h2>
-                  <h2>£5.00</h2>
-                </dt>
-                <dd class="description">egg sausage and bacon</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Egg Special</h2>
-                  <h2>£2.00</h2>
-                </dt>
-                <dd class="description">egg and spam</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Standard Special</h2>
-                  <h2>£4.00</h2>
-                </dt>
-                <dd class="description">egg bacon and spam</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Deluxe Special</h2>
-                  <h2>£6.00</h2>
-                </dt>
-                <dd class="description">egg bacon sausage and spam</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Double Special</h2>
-                  <h2>£6.00</h2>
-                </dt>
-                <dd class="description">spam bacon sausage and spam</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Standard Triple Special</h2>
-                  <h2>£7.00</h2>
-                </dt>
-                <dd class="description">spam egg spam spam bacon and spam</dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Spam Lover's Deluxe</h2>
-                  <h2>£10.00</h2>
-                </dt>
-                <dd class="description">
-                  spam sausage spam spam bacon spam tomato and spam
-                </dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Spam Lover's Special</h2>
-                  <h2>£12.00</h2>
-                </dt>
-                <dd class="description">
-                  spam spam spam spam spam spam spam baked beans spam spam spam
-                  and spam
-                </dd>
-              </dl>
-            </li>
-            <li>
-              <dl>
-                <dt class="title">
-                  <h2>Lobster Thermidor au Crevette</h2>
-                  <h2>£100.01</h2>
-                </dt>
-                <dd class="description">
-                  Lobster with a Mornay sauce served in a Provencale manner with
-                  shallots and aubergines garnished with truffle pate, brandy
-                  and with a fried egg on top and spam
-                </dd>
-              </dl>
-            </li>
-          </ul>
+            <ul>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Standard</p>
+                    <p>£3.00</p>
+                  </dt>
+                  <dd class="description">egg and bacon</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Deluxe</p>
+                    <p>£5.00</p>
+                  </dt>
+                  <dd class="description">egg sausage and bacon</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Egg Special</p>
+                    <p>£2.00</p>
+                  </dt>
+                  <dd class="description">egg and spam</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Standard Special</p>
+                    <p>£4.00</p>
+                  </dt>
+                  <dd class="description">egg bacon and spam</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Deluxe Special</p>
+                    <p>£6.00</p>
+                  </dt>
+                  <dd class="description">egg bacon sausage and spam</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Double Special</p>
+                    <p>£6.00</p>
+                  </dt>
+                  <dd class="description">spam bacon sausage and spam</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Standard Triple Special</p>
+                    <p>£7.00</p>
+                  </dt>
+                  <dd class="description">spam egg spam spam bacon and spam</dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Spam Lover's Deluxe</p>
+                    <p>£10.00</p>
+                  </dt>
+                  <dd class="description">
+                    spam sausage spam spam bacon spam tomato and spam
+                  </dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Spam Lover's Special</p>
+                    <p>£12.00</p>
+                  </dt>
+                  <dd class="description">
+                    spam spam spam spam spam spam spam baked beans spam spam
+                    spam and spam
+                  </dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt class="title">
+                    <p>Lobster Thermidor au Crevette</p>
+                    <p>£100.01</p>
+                  </dt>
+                  <dd class="description">
+                    Lobster with a Mornay sauce served in a Provencale manner
+                    with shallots and aubergines garnished with truffle pate,
+                    brandy and with a fried egg on top and spam
+                  </dd>
+                </dl>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
       <footer id="footer" class="item">
